# pseudospec

./: .dockerignore  .gitignore  .pyenv  Dockerfile  Dockerfile-dev  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements-conda.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
pseudospec/: __init__.py  speceq.py  speclib.py
samples/: BZreaction.ipynb  FHN.ipynb  FHNequations.ipynb  KS.ipynb  KdV.ipynb  eqAdv.py  equations.py
src/pseudospec/: __init__.py  speceq.py  speclib.py
tests/: expected_values.py  expected_values_pde.py  test_pde.py  test_speceq.py  test_speclib.py
