[project]
name = "pseudospec"
version = "1.1.3"
description = "a module for the pseudo-spectral method"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.12.1",
    "ipywidgets>=8.1.5",
    "numpy>=2.2.1",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-bokeh>=4.0.5",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "nose>=1.3.7",
    "panel>=1.5.5",
]

