# from setuptools import setup

# setup(
#     name="pseudospec",
#     version="1.1.0",
#     description="a module for the pseudo-spectral method",
#     url="https://github.com/r-ikota/pseudospec",
#     packages=["pseudospec"],
#     package_dir={"pseudospec": "pseudospec"},
#     install_requires=["tqdm>=4.61"],
#     author="Ryo IKOTA",
#     author_email="r.ikota.mt@gmail.com",
#     license="BSD",
#     keywords="pseudo-spectral method",
# )

[metadata]
name = pseudospec
version = attr: pseudospec.__version__
url = https://github.com/r-ikota/pseudospec
license = BSD license
author = Ryo Ikota
author_email = r.ikota.mt@gmail.com
description = a module for the pseudo-spectral method
platforms = any
keywords = pseudo-spectral method
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Numerics


[options]
packages = find:
package_dir =
    = src
zip_safe = false
include_package_data = true
python_requires = >=3.9
install_requires =
    tqdm >= 4.61

[options.packages.find]
where = src
    
